--- a/univisia/src/styles.scss
+++ b/univisia/src/styles.scss
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+$max-width: 1500px;
+
+// colors
+$orange: #FB4000;
+
+
+
+@mixin resize-800-1100 ($size) {
+    @if $size == small {
+        @media (max-width: 799px) { @content; }
+
+    } @else if $size == medium {
+        @media screen and (max-width: 1100px) and (min-width: 800px) { @content; }
+
+    } @else if $size == large-up {
+        @media (min-width: 1099px) { @content; }
+
+    } @else if $size == large-down {
+        @media (max-width: 1100px) { @content; }
+
+    } @else if $size == small-up {
+        @media (min-width: 800px) { @content; }
+    }
+     @else if $size == small-down {
+        @media (max-width: 800px) { @content; }
+    }
+}
+
+// @include resize-800-1100 (large-up) {}
+
+// @include resize-800-1100 (large-down) {}
+
+// @include resize-800-1100 (medium) {}
+
+// @include resize-800-1100 (small-up) {}
+
+// @include resize-800-1100 (small-down) {}
+
+
+body {
+    
+}
