--- a/univisia/src/styles.scss
+++ b/univisia/src/styles.scss
@@ -1,7 +1,21 @@
+@font-face {
+    font-family: "Tunnels";
+    src: local("Tunnels"), url(./assets/fonts/font_tt_tunnels/TTTunnels-Bold.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "Formular";
+    src: local("Formular"), url(./assets/fonts/font_formular/Formular.ttf) format("truetype");
+}
+
+// max content width 
 $max-width: 1500px;
 
 // colors
 $orange: #FB4000;
+$silver: #E5E5E680;
+
+$transition: .3s;
 
 
 
@@ -37,6 +51,77 @@ $orange: #FB4000;
 // @include resize-800-1100 (small-down) {}
 
 
+@include resize-800-1100 (large-up) {
+    p, a {
+        font-size: 16px;
+    }
+}
+
+@include resize-800-1100 (large-down) {
+    p, a {
+        font-size: 10px;
+    }
+}
+
 body {
-    
+    margin: 0;
+    font-family: "Formular";
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    transition: color $transition;
+
+    &:hover {
+        color: $orange;
+    }
+}
+
+h5 {
+    font-size: 25px;
+}
+
+p {
+    margin: 0;
+}
+
+.text-tunnels {
+    font-family: "Tunnels";
+}
+
+.essentials {
+    text-transform: uppercase;
+}
+
+.text-orange {
+    color: $orange;
+}
+
+.center-letter {
+    position: absolute;
+    z-index: 1;
+    width: 15%;
+    right: 50.2vw;
+}
+
+.bg-img {
+    width: 55vw;
+    height: auto;
+}
+
+// basic scroll 
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color:#E6E6E6;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color:#ADADAD;
 }
