Mini menu, max width

--- a/univisia/src/app/header/header-image/header-image.component.scss
+++ b/univisia/src/app/header/header-image/header-image.component.scss
@@ -34,4 +34,9 @@
     .menu {
         background-image: url('../../../assets/images/menu.svg');
     }
+
+    :host {
+        display: flex;
+        justify-content: space-between;
+    }
 }
