--- a/univisia/src/app/navigation/navigations.component.scss
+++ b/univisia/src/app/navigation/navigations.component.scss
@@ -1,3 +1,7 @@
-:host {
-    width: 50%;
+@import "../../styles.scss";
+
+@include resize-800-1100 (large-up) {
+    :host {
+        width: 47%;
+    }
 }
