--- a/univisia/src/app/navigation/main-navigation/main-navigation.component.scss
+++ b/univisia/src/app/navigation/main-navigation/main-navigation.component.scss
@@ -5,12 +5,7 @@
     display: flex;
     justify-content: space-between;
 
-    a {
-        text-decoration: none;
-        color: black;
-
-        &.active {
-            color: $orange;
-        }
+    a.active {
+        color: $orange;
     }
 }
