--- a/univisia/src/styles.scss
+++ b/univisia/src/styles.scss
@@ -77,7 +77,14 @@ h5 {
 h4 {
     font-size: 48px;
     font-family: "Tunnels";
-    margin: 10px;
+    margin: 10px 0;
+    text-transform: uppercase;
+}
+
+h1 {
+    font-size: 130px;
+    font-family: "Tunnels";
+    margin: 10px 0;
 }
 
 p {
