--- a/univisia/src/app/pages/cases-pages/cases-pages.component.html
+++ b/univisia/src/app/pages/cases-pages/cases-pages.component.html
@@ -1,2 +1,2 @@
-<app-cases-page *ngIf="windowWidth > breakpoint"></app-cases-page>
-<app-mini-cases-page *ngIf="windowWidth < breakpoint"></app-mini-cases-page>
+<app-cases-page *ngIf="windowWidth > breakpoint" [cases]="cases"></app-cases-page>
+<app-mini-cases-page *ngIf="windowWidth < breakpoint" [cases]="cases"></app-mini-cases-page>
