Servises / Main page

--- a/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.html
+++ b/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.html
@@ -34,7 +34,7 @@
         </div>
     </div>
    <div class="buttons">
-       <div>
+       <div> <!-- do not remove -->
            <button (click)="decrementIndex()" class="arrow-btn text-tunnels text-orange"
                *ngIf="showContent > 0">
                <img src="../../../../assets/images/v_in_orange.svg" alt="">
