--- a/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.html
+++ b/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.html
@@ -1,1 +1,52 @@
-<p>mini-main-page works!</p>
+<div class="azure-services"></div>
+
+<div class="azure-description">
+    <h4><span class="text-orange">Azure &nbsp; </span>services</h4>
+    <div class="details">
+        <h5>We practice Azure because <span class="text-orange">we are Azure believers.</span></h5>
+        <p>The range of our Azure services includes migration to Azure, 
+            cloud-based websites, serverless apps, CI/CD pipelines configuration 
+            and integration of many Azure services like Azure Search, Storage, 
+            AppInsights and others.
+        </p>
+    </div>
+</div>
+
+<div class="webdev">
+    <img src="../../../../assets/images/wesites_cut.png" alt="">
+    <h4>Website development</h4>
+    <div class="details">
+        <h5>Our experience in website development is tremendous.</h5>
+        <p>We’ve built plenty of custom solutions for small startups and 
+            enterprise projects. The passion for learning new technologies 
+            always pushes us to create modern and reliable web applications.
+        </p>
+    </div>
+</div>
+
+<div class="startups">
+    <img src="../../../../assets/images/microsoft_cut.png" alt="">
+    <h4>Services for startups</h4>
+    <div class="details">
+        <h5>Our Azure and Website Development expertise works well for startups in industries like FinTech, AgriTech, BioTech and others.</h5>
+        <p>By understanding the “Start Small, Scale Fast” principle and with the 
+            power of cloud computing, we help startups reduce the time to market 
+            and then scale quickly. With best practices from Microsoft, our solutions 
+            are secure, robust and cost-effective.
+        </p>
+    </div>
+</div>
+
+<div class="stuffing">
+    <img src="../../../../assets/images/stuffing_cut.png" alt="">
+    <h4>IT stuffing</h4>
+    <div class="details">
+        <h5>Sometimes it is challenging to find skilled specialists in your area. That’s where we can help.</h5>
+        <p>Being located in Lviv/Ukraine and with instant access to an 
+            immense pool of professionals, you’ll enjoy the flexibility 
+            and how quickly we can increase or decrease the size of the extended team. 
+            Our focus is Microsoft stack including C#, SQL Server, EF, Typescript, 
+            Azure and Angular.
+        </p>
+    </div>
+</div>
