--- a/univisia/src/styles.scss
+++ b/univisia/src/styles.scss
@@ -87,6 +87,13 @@ h1 {
     margin: 10px 0;
 }
 
+h2 {
+    font-size: 75px;
+    font-family: "Tunnels";
+    margin: 12px 0;
+    text-transform: uppercase;
+}
+
 p {
     margin: 0;
 }
