--- a/univisia/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/univisia/src/app/navigation/main-navigation/main-navigation.component.html
@@ -1,6 +1,6 @@
 <div class="nav-items">
     <a routerLinkActive="active" routerLink="/services">Servises</a>
-    <a routerLinkActive="active" routerLink="/about">About us</a>
+    <a routerLinkActive="active" routerLink="/about">About</a>
     <a routerLinkActive="active" routerLink="/cases">Cases</a>
     <a routerLinkActive="active" routerLink="/contact">Contact</a>
 </div>
