--- a/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
+++ b/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="menu-item">
-            <h4><a routerLinkActive="active" routerLink="/about" class="essentials">About us</a></h4>
+            <h4><a routerLinkActive="active" routerLink="/about" class="essentials">About</a></h4>
             <div class="options" *ngIf="currentPage === 'about'">
                 <h5>Azure Services</h5>
                 <h5>Website Development</h5>
