--- a/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.scss
+++ b/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.scss
@@ -24,10 +24,11 @@ h4 {
         content: ' ';
         background-image: url('../../../../assets/images/rectangle_orange.svg');
         height: 35px;
-        width: 17px;
+        width: 7px;
         margin-left: -60px;
         margin-right: 45px;
         background-repeat: no-repeat;
+        background-size: contain;
     }
 }
 
