--- a/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.scss
+++ b/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.scss
@@ -30,6 +30,7 @@
             left: -20px;
             top: 8px;
             background-repeat: no-repeat;
+            background-size: contain;
         }
     }
 
