--- a/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.scss
+++ b/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.scss
@@ -53,6 +53,7 @@
             margin-left: 15px;
             margin-right: 5px;
             background-repeat: no-repeat;
+            background-size: contain;
         }
     }
 
