--- a/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
+++ b/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
@@ -22,7 +22,7 @@ margin-bottom: 15px;
 
 .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 
     .arrow-btn {
         margin-top: 30px;
