Updated mini menu, next btn

--- a/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
+++ b/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
@@ -9,41 +9,23 @@
     <div class="menu-container">
         <div class="menu-item">
             <h4><a routerLinkActive="active" routerLink="/services" class="essentials">Servises</a></h4>
-            <div class="options" *ngIf="currentPage === 'services'">
+            <div class="options">
                 <h5>Azure Services</h5>
                 <h5>Website Development</h5>
                 <h5>Service for Startups</h5>
                 <h5>IT Stuffing</h5>
             </div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" (click)="menuOpen = !menuOpen">
             <h4><a routerLinkActive="active" routerLink="/about" class="essentials">About</a></h4>
-            <div class="options" *ngIf="currentPage === 'about'">
-                <h5>Azure Services</h5>
-                <h5>Website Development</h5>
-                <h5>Service for Startups</h5>
-                <h5>IT Stuffing</h5>
-            </div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" (click)="menuOpen = !menuOpen">
             <h4><a routerLinkActive="active" routerLink="/cases" class="essentials">Cases</a></h4>
-            <div class="options" *ngIf="currentPage === 'cases'">
-                <h5>Azure Services</h5>
-                <h5>Website Development</h5>
-                <h5>Service for Startups</h5>
-                <h5>IT Stuffing</h5>
-            </div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" (click)="menuOpen = !menuOpen">
             <h4><a routerLinkActive="active" routerLink="/contact" class="essentials">Contact</a></h4>
-            <div class="options" *ngIf="currentPage === 'contacts'">
-                <h5>Azure Services</h5>
-                <h5>Website Development</h5>
-                <h5>Service for Startups</h5>
-                <h5>IT Stuffing</h5>
-            </div>
         </div>
-        <div class="publics">
+        <div class="publics" (click)="menuOpen = !menuOpen">
             <img class="fb" src="../../../assets/images/facebook.svg" alt="">
             <img class="in" src="../../../assets/images/linkedin.svg" alt="">
         </div>
