--- a/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
+++ b/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
@@ -32,6 +32,7 @@ margin-bottom: 15px;
         display: flex;
         align-items: center;
         transition: color $transition;
+        padding: 0;
         
         img {
             margin-right: 20px;
