--- a/univisia/src/app/app.component.scss
+++ b/univisia/src/app/app.component.scss
@@ -15,6 +15,6 @@
 
 @include resize-800-1100 (large-down) {
     .content {
-        padding: 20px 20px 70px 20px;
+        padding: 0 20px 70px 20px;
     }
 }
